# Hybrid_Automation

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  ARCHITECTURAL_COMPLIANCE_REPORT.md  AUDIT_ACTION_CHECKLIST.md  AUDIT_EXECUTIVE_SUMMARY.txt  AUDIT_README.md  AUDIT_VISUAL_SUMMARY.md  FRAMEWORK_ARCHITECTURE_AUDIT_REPORT.md  IMPLEMENTATION_GUIDE.md  LICENSE  LOGGING_COMPLIANCE_REPORT.txt  Makefile  PENDING_IMPLEMENTATIONS_AND_FIXES.md  PRD.txt  PROJECT_AUDIT_REPORT.json  PROJECT_STRUCTURE.txt  README.md  README.md.backup  START_INTERACTIVE_MODE.bat  START_INTERACTIVE_MODE.ps1  check_dependencies.py  cleanup_pages.py  conftest.py  debug_fixture.py  deep_audit.py  env.example  install_missing_dependencies.ps1  pyproject.toml  pytest.ini  quick_start_enhanced.py  requirements-dev.txt  requirements.txt  requirements_ai_optional.txt  run_pom_tests_cli.py  setup_ai.py  test_diagnostic.py  test_minimal_playwright.py  (+6 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: architecture-audit.yml  lint.yml  release.yml  test.yml  test_execution.yml
Framework-Knowledge-Center/: INDEX.md
Framework-Knowledge-Center/00-Quick-Reference/: PYTEST_MARKERS_COMPLETE_GUIDE.md  QUICK_REFERENCE_DYNAMIC_CONFIG.md
Framework-Knowledge-Center/02-Core-Concepts/: Engine-Selection-System.md  Smart-Actions.md
Framework-Knowledge-Center/03-Page-Object-Model/: POM-Architecture.md
Framework-Knowledge-Center/04-Test-Data-Management/: URL_QUERY_STRING_TESTING_DESIGN.md  URL_TESTING_QUICK_REFERENCE.md
Framework-Knowledge-Center/05-Observability-And-Logging/: Enterprise-Logging-100-Implementation.md  Enterprise-Logging-Architecture.md  Enterprise-Logging-Complete-Implementation.md  Enterprise-Logging-Comprehensive-Audit.md  Enterprise-Logging-Deployment-Checklist.md  Enterprise-Logging-Deployment.md  Enterprise-Logging-Final-Summary.md  Enterprise-Logging-Implementation-Report.md  Enterprise-Logging-Implementation.md  Enterprise-Logging-Integration-Guide.md  Enterprise-Logging-Pending-Completion.md  Enterprise-Logging-System-Complete.md  Enterprise-Logging-Verification-Report.md  Logging-Enhancements.md  Logging-System-Audit-Summary.md  Logging-System-Fixes.md
Framework-Knowledge-Center/06-CLI-And-Tooling/: Directory-Structure.md  Interactive-CLI-Guide.md
Framework-Knowledge-Center/06-Project-Status/: PROJECT_STATUS.md  TEST_FIXES_COMPLETION_REPORT.md
Framework-Knowledge-Center/07-Documentation-Meta/: DOCUMENTATION_INDEX.md
Framework-Knowledge-Center/07-Governance/: Comprehensive-Audit-Report-2024.md  Configuration-Fixes-Reference.md  DYNAMIC_REPORT_NAMING_IMPLEMENTATION.md  Framework-Architecture-Audit-Report.md  Governance-System-Overview.md  PYTEST_CONFIG_FIXES.md  Pending-Implementations-And-Fixes.md  ROOT_DIRECTORY_ORGANIZATION_REPORT.md  Session-8-Completion-Report.md
Framework-Knowledge-Center/08-Audit-Reports/: BOOKSLOT_POM_ARCHITECTURE_AUDIT_REPORT.md  COMPLETE_POM_REAUDIT_REPORT.md  FINAL_POM_AUDIT_REPORT.md  POM_AUDIT_REPORT_FINAL.md  POM_REFACTORING_PROGRESS_REPORT.md
Framework-Knowledge-Center/08-Media-Capture/: DYNAMIC_VIDEO_NAMING_IMPLEMENTATION.md  Media-Capture-System.md  Screenshot-Video-Implementation.md  VIDEO_NAMING_AUDIT_REPORT.md  Video-Naming-Update-Report.md
Framework-Knowledge-Center/09-Rules-And-Standards/: Strict-Rules.md
Framework-Knowledge-Center/10-Rules-And-Standards/: Anti-Patterns.md  CLI_MODERNIZATION_IMPLEMENTATION.md  DIRECTORY_STRUCTURE_GUIDE.md  HOW_TO_USE_INTERACTIVE_CLI.md  INTERACTIVE_CLI_GUIDE.md  INTERACTIVE_CLI_IMPLEMENTATION_REPORT.md  INTERACTIVE_CLI_V2.1_FLOW_ORDER_UPDATE.md  INTERACTIVE_CLI_V2_IMPLEMENTATION_REPORT.md  MODERN_MULTI_PROJECT_CLI.md
artifacts/commit_history/: commit_audit_log.json
ci/: baseline_allowlist.yaml
config/: api_db_mapping.yaml  engine_decision_matrix.yaml  environments.yaml  human_behavior.yaml  logging_config.template.yaml  projects.yaml  settings.py  url_testing.yaml
docker/: Dockerfile  docker-compose.yml
docs/: AUDIT_TODO_LIST_AND_VERIFICATION.md  BOOKSLOT_HUMAN_BEHAVIOR_GUIDE.md  BOOKSLOT_TEST_DESIGN_MATRIX.md  BOOKSLOT_URL_TESTING_IMPLEMENTATION_PLAN.md  BROWSER_MAXIMIZED_GUIDE.md  CODE_AUDIT_REPORT.md  CONTEXT_AWARE_AUTOMATION.md  DEPLOYMENT_CHECKLIST.md  DYNAMIC_AUDIT_IMPLEMENTATION.md  DYNAMIC_AUDIT_SYSTEM.md  ENFORCEMENT_SUMMARY.md  FAKE_DATA_GENERATOR_ARCHITECTURE.md  FAKE_DATA_GENERATOR_GUIDE.md  FAKE_DATA_GENERATOR_QUICK_REF.md  FAKE_DATA_GENERATOR_SUMMARY.md  FAKE_DATA_INTEGRATION_BOOKSLOT.md  GOVERNANCE_IMPLEMENTATION_COMPLETE.md  GOVERNANCE_METRICS_TEMPLATE.md  GOVERNANCE_QUICK_REF.md  GOVERNANCE_SYSTEM.md  HUMAN_BEHAVIOR_GUIDE.md  MANDATE_COMPLIANCE_VERIFICATION.md  MASTER_COMPLETION_REPORT.md  MODERN_FRAMEWORK_ARCHITECTURE.md  README.md  REQUIREMENTS_COMPLIANCE_MATRIX.md  URL_TESTING_FINAL_SUMMARY.md  URL_TESTING_IMPLEMENTATION_ROADMAP.md  URL_TESTING_INTEGRATION_GUIDE.md  URL_TESTING_VERIFICATION_REPORT.md
examples/: ai_engine_selector_advanced_demo.py  ai_validation_enhanced_demo.py  ai_validation_quick_reference.py  api_interceptor_enhanced_demo.py  bookslot_human_behavior_example.py  constructor_injection.py  engine_selector_advanced_demo.py  fake_data_generator_examples.py  modern_features_quickstart.py  playwright_enhanced_demo.py  recording_demo.py  selenium_enhanced_demo.py
examples/human_behavior/: README.md  example_01_basic_usage.py  example_02_form_filling.py  example_03_framework_integration.py  example_04_advanced_ecommerce.py
framework/: __init__.py  di_container.py  py.typed
framework/accessibility/: __init__.py  accessibility_tester.py
framework/ai/: ai_provider_factory.py  nl_test_generator.py
log/: pytest_configs.json
models/: __init__.py  appointment.py
pages/: __init__.py
scripts/: audit_logging_system.py  auto_instrument.py  logging_compliance_scanner.py
tests/: README.md  __init__.py  comprehensive_report_enhancements.py  conftest.py  report_enhancements.py  test_dynamic_reports.py  test_video_link_verification.py
utils/: __init__.py  fake_data_generator.py  logger.py
(+325 files in other folders)
