# ============================================================================
# MODERN PYTHON PROJECT CONFIGURATION (PEP 621)
# Python 3.12+ Compatible, Future-Proof for 30 Years
# ============================================================================

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

# ============================================================================
# PROJECT METADATA
# ============================================================================

[project]
name = "enterprise-automation-framework"
version = "1.0.0"
description = "Enterprise-grade hybrid automation framework (Playwright + Selenium + AI)"
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Lokendra Singh", email = "lokendra.singh@centerforvein.com"}
]
maintainers = [
    {name = "Lokendra Singh", email = "lokendra.singh@centerforvein.com"}
]
keywords = [
    "automation",
    "testing",
    "playwright",
    "selenium",
    "pytest",
    "ai-testing",
    "qa",
    "test-automation",
    "ui-testing",
    "api-testing",
    "database-testing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pytest",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]

# ============================================================================
# CORE DEPENDENCIES
# ============================================================================

dependencies = [
    # Test Framework
    "pytest>=7.4.0,<9.0",
    "pytest-xdist>=3.3.1",
    "pytest-html>=4.0.0",
    "pytest-bdd>=6.1.1",
    "pytest-timeout>=2.1.0",
    "pytest-asyncio>=0.23.0",
    
    # UI Automation - Playwright
    "playwright>=1.40.0,<2.0",
    "pytest-playwright>=0.4.3",
    
    # UI Automation - Selenium
    "selenium>=4.15.0,<5.0",
    "webdriver-manager>=4.0.1",
    
    # API Testing
    "requests>=2.31.0,<3.0",
    "httpx>=0.25.0",
    
    # Database
    "SQLAlchemy>=2.0.23,<3.0",
    "pyodbc>=5.0.1",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "cryptography>=41.0.7",
    
    # Configuration & Validation
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0",
    
    # Logging & Reporting
    "allure-pytest>=2.13.2",
    "loguru>=0.7.2",
    
    # Data Generation
    "Faker>=21.0.0",
    
    # Image Processing
    "Pillow>=10.1.0",
    "imagehash>=4.3.1",
    
    # WebSocket
    "websockets>=12.0",
    "websocket-client>=1.7.0",
    
    # Utilities
    "python-dateutil>=2.8.2",
    "tenacity>=8.2.3",
    "colorama>=0.4.6",
]

# ============================================================================
# OPTIONAL DEPENDENCIES (Install with: pip install .[ai,dev,all])
# ============================================================================

[project.optional-dependencies]
# AI & Intelligence Features
ai = [
    "openai>=1.6.0",
    "anthropic>=0.18.0",
]

# Security Testing
security = [
    "python-owasp-zap-v2.4>=0.1.0",
]

# Contract Testing
contract = [
    "schemathesis>=3.19.0",
]

# ML Features
ml = [
    "scikit-learn>=1.3.2",
    "numpy>=1.26.2",
]

# Performance Testing
performance = [
    "locust>=2.18.0",
]

# Development Dependencies
dev = [
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pre-commit>=3.6.0",
    "ipython>=8.18.0",
    "types-PyYAML>=6.0.12",
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.19",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

# Complete installation
all = [
    "enterprise-automation-framework[ai,security,contract,ml,performance,dev,docs]"
]

# ============================================================================
# PROJECT URLS
# ============================================================================

[project.urls]
Homepage = "https://www.centerforvein.com"
Documentation = "https://www.centerforvein.com/docs"
Repository = "https://github.com/lokendrasingh/automation"
Issues = "https://github.com/lokendrasingh/automation/issues"
Changelog = "https://github.com/lokendrasingh/automation/releases"

# ============================================================================
# CLI ENTRY POINTS - Unified Modern CLI
# ============================================================================

[project.scripts]
# Unified CLI entry point (modern pattern)
automation = "framework.cli:main"

# Legacy entry points (deprecated - use 'automation <command>' instead)
automation-run = "framework.cli.run:main"
automation-record = "framework.cli.record:main"
automation-simulate = "framework.cli.simulate:main"

# ============================================================================
# BUILD CONFIGURATION (Hatchling)
# ============================================================================

[tool.hatch.build]
include = [
    "framework/**/*.py",
    "pages/**/*.py",
    "utils/**/*.py",
    "config/**/*.yaml",
    "config/**/*.py",
    "framework/py.typed",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/.pytest_cache",
    "**/test_*.py",
    "tests/**",
    "examples/**",
    ".venv/**",
    "venv/**",
]

[tool.hatch.build.targets.wheel]
packages = ["framework", "pages", "utils", "config"]

# ============================================================================
# PYTEST CONFIGURATION - See pytest.ini
# Note: pytest configuration is managed in pytest.ini file to avoid conflicts
# ============================================================================
# BLACK CODE FORMATTER
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# ============================================================================
# RUFF LINTER & FORMATTER
# ============================================================================

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip strict parameter
    "ARG001", # unused function argument
    "ARG002", # unused method argument
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["ARG001", "ARG002"]

[tool.ruff.isort]
known-first-party = ["framework", "pages", "utils"]

# ============================================================================
# MYPY TYPE CHECKER
# ============================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

# Module-specific overrides
[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "selenium.*",
    "faker.*",
    "allure.*",
    "pytest_bdd.*",
]
ignore_missing_imports = true

# ============================================================================
# COVERAGE
# ============================================================================

[tool.coverage.run]
source = ["framework", "pages", "utils"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/examples/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================================
# ISORT (Import Sorting)
# ============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["framework", "pages", "utils"]
known_third_party = ["pytest", "playwright", "selenium"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# BANDIT (Security Linter)
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests", "examples", ".venv", "venv"]
skips = ["B101", "B601"]

# ============================================================================
# COMMITIZEN (Semantic Versioning)
# ============================================================================

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "framework/__init__.py:__version__"
]
